--- a/To-do List/src/App.css
+++ b/To-do List/src/App.css
@@ -1,14 +1,19 @@
+body {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-weight: 400;
+  color: black;
+}
 .App {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: rgb(222, 184, 135);
 }
 .wrapper {
-  border-radius: 20px;
-  background-color: rgb(222, 184, 135);
-  height: 80vh;
-  width: 50vw;
+  max-height: 90vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,50 +27,92 @@
   align-items: center;
 }
 .input-text {
-  padding: 1em;
+  font-size: 1.2em;
+  background-color: rgb(255, 245, 231);
+  padding: 0.5em;
   margin-right: 1em;
   width: 100%;
+  border-radius: 1em;
 }
 .add-button {
-  height: 100%;
+  transition: 0.3s;
+  height: 3em;
+  border: 0;
+  background-color: rgb(255, 245, 231);
+}
+.add-button:hover {
+  background-color: black;
+  color: white;
+  border: 0;
+}
+
+.list-wrapper {
+  width: 90%;
+
+  box-shadow: 0px 0px 9px 5px rgba(0, 0, 0, 0.3);
+  overflow-y: scroll;
+  padding: 1em;
+  margin-bottom: 2em;
+  border-radius: 1em;
 }
 
 .items {
-  width: 90%;
-  padding: 1em;
-  margin-bottom: 3em;
-  border: solid rgb(211, 160, 94) 2px;
-  box-shadow: 0px 0px 9px 5px rgba(0, 0, 0, 0.637);
-  overflow-y: scroll;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 0 2em 0;
+  margin: 0;
+  width: 100%;
 }
 
 .list-items {
-  width: 100%;
-  min-height: 5em;
-  margin-bottom: 1em;
-  display: flex;
-  padding: 0.5em;
+  position: relative;
+  color: black;
+  min-width: 20%;
+  max-width: 60%;
+  height: auto;
+  margin: 0.5em;
+  padding: 1.5em 1.5em 0.5em 0.5em;
+  list-style-type: none;
   background-color: rgb(211, 160, 94);
-  align-items: center;
-  justify-content: space-between;
   border-radius: 10px;
+  transition: 0.1s;
+  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 .list-items-text {
-  font-size: 1.5em;
+  font-size: 1.1em;
   font-weight: 500;
   margin: 0;
 }
+.list-items:hover {
+  box-shadow: 0px 0px 9px 5px rgba(0, 0, 0, 0.6);
+  transform: scale(1.05);
+  transform: translate(2px, 0);
+}
 
-.items::-webkit-scrollbar {
+.delete {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  border-radius: 5px 10px 5px 5px;
+  top: 0px;
+  right: 0;
+  width: 1em;
+  height: 2em;
+  font-size: 0.7em;
+  margin: 0.2em;
+}
+
+::-webkit-scrollbar {
   width: 1em;
 }
 
-.items::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: hsla(0, 0%, 100%, 0);
   border-radius: 100vw;
 }
 
-.items::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: rgb(211, 160, 94);
   border-radius: 100vw;
 }
