--- a/sign-in-page/components/welcome.css
+++ b/sign-in-page/components/welcome.css
@@ -1,6 +1,7 @@
 .welcome {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+      display: flex;
+    align-items: center;
+    height: 100vh;
+    justify-content: center;
+    width: 100vw;
 }
