--- a/RecipeBook/src/css/App.css
+++ b/RecipeBook/src/css/App.css
@@ -1,37 +1,25 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
+body{
+  background-color: black;
+}
+
 .App {
   font-size: 1.25rem;
-  height: 100vh;
+  max-height: 90vh;
   font-family: "Open Sans", sans-serif;
+  color: white;
   position: relative;
   z-index: 0;
-  color: white;
-}
-
-@keyframes scrollBg {
-  from {
-    transform: translateY(0px);
-  }
-  to {
-    transform: translateY(-1080px);
-  }
-}
-
-.scroll-bg {
-  height: 2160px;
-  width: 100%;
-  position: fixed;
-  background: url("https://andreivictor.ro/codepen/scroll-bg-animation-pinterest/bg_pasta_grid-3f880df3.jpg")
-    repeat-y;
-  background-size: 100% 1080px;
-  animation: scrollBg 50s linear infinite;
-  z-index: -1;
 }
 
 .navigation {
+  width: 100%;
   height: 10vh;
+  top:0;
+  position: sticky;
   display: flex;
+  background-color: rgba(0,0,0,0.7);
 }
 
 .logo {
@@ -62,6 +50,7 @@
 
 .list-items {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   cursor: pointer;
@@ -75,8 +64,36 @@
   box-shadow: #ffffff75 0px -10vh 0px 0 inset;
 }
 
+.dropdown {
+  display: flex;
+  position: relative;
+  left: 0;
+  top : 25%;
+  width: 100%;
+}
+
+.dropdown-content {
+  position: absolute;
+  background-color: #f1f1f1;
+  width: 100%;
+  left:0;
+}
+
+.dropdown-content ul{
+  margin: 0;
+  padding: 0;
+}
+
+.dropdown-content ul>li {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+
 .intro {
-  margin: 10vh 0;
+  margin: 10vh 0 10vh 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -107,7 +124,6 @@
     rgb(255, 85, 85) 0px 0px 0 30px inset, rgb(217, 217, 217) 5px 5px 10px 0; */
   box-shadow: inset rgb(142, 142, 142) -60px -60px 0px 0px, white 5px 5px 0px 0;
   transform: translate(0px, -5px);
-  color: white;
 }
 .start-button:active {
   transform: translate(0px, 5px);
@@ -193,7 +209,7 @@
   border-radius: 20px;
   background-color: #ffffff75;
   box-shadow: grey 0 0 10px 0;
-  min-height: 90vh;
+  min-height: 80vh;
   width: 90vw;
 }
 
@@ -283,7 +299,7 @@
   position: fixed;
   z-index: 1;
   width: 50vw;
-  height: 50vh;
+  min-height: 50vh;
   padding: 5rem;
 }
 
