--- a/Movies/src/index.css
+++ b/Movies/src/index.css
@@ -112,6 +112,9 @@ section {
   max-width: 100%;
   max-height: 100%;
 }
+.filter {
+  margin: 1rem 0;
+}
 
 @media only screen and (max-width: 600px) {
   body {
